--- a/src/components/layout/Header/Header.module.scss
+++ b/src/components/layout/Header/Header.module.scss
@@ -2,33 +2,36 @@
   grid-area: header;
   display: grid;
   grid-template-columns: 1fr 1fr;
-}
-@media (max-width: 950px) {
-  .header{
+
+
+  @media (max-width: 950px) {
     grid-template-columns: 2fr 1fr;
   }
-}
-@media (max-width: 750px) {
-  .header{
-    grid-template-columns: 1fr;
+  @media (max-width: 764px) {
+    display: none;
   }
 }
+
+
+
 .header_left{
   display: flex;
   justify-content: space-between;
+  @media (max-width: 764px) {
+
+
+  }
 }
-.header_right{
+
+.header_right {
   display: flex;
   justify-content: flex-end;
   margin-top: 30px;
-}
-@media (max-width: 950px) {
-  .header_right {
+  @media (max-width: 950px) {
     justify-content: flex-start;
+
   }
-}
-@media (max-width: 750px) {
-  .header_right {
+  @media (max-width: 764px) {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
@@ -36,19 +39,20 @@
     margin-top: 0px;
   }
 }
+
 .logo{
 margin-top: 23px;
 }
-.nav{
+
+.nav {
   display: flex;
   margin-top: 29px;
-}
-@media (max-width: 750px) {
-  .nav {
+  @media (max-width: 764px) {
     display: grid;
   }
 }
-.element{
+
+.element {
   margin: 0 15px 0 0;
 
 }
@@ -58,7 +62,7 @@ margin-top: 23px;
   font-size: 18px;
 
 }
-@media (max-width: 750px) {
+@media (max-width: 764px) {
   .time {
     grid-column: 2/3;
     justify-self: end;
@@ -77,7 +81,7 @@ margin-top: 23px;
   text-decoration: none;
   font-size: 18px;
 }
-@media (max-width: 750px) {
+@media (max-width: 764px) {
   .contacts {
     grid-column: 2/3;
     justify-self: end;
