--- a/src/components/pages/Mocechuk/Works/Works.module.scss
+++ b/src/components/pages/Mocechuk/Works/Works.module.scss
@@ -1,21 +1,34 @@
-.works{
-    display: grid;
-    grid-template: 1fr/ 1fr 1fr 2fr;
+
+.title {
+  display: grid;
+  grid-template: 1fr/ 25% 30% 45%;
+  align-items: center;
+  padding-bottom: 100px;
+  @media (max-width: 764px) {
+    grid-template-columns: 1fr 1fr;
+    grid-auto-rows: minmax(30px, auto);
+    padding-bottom: 60px;
+  }
 }
 
-.item_1{
-    grid-column: 2/3;
-}
-
-.item_2{
-    grid-column: 3/4;
-}
-.title{
-    display: grid;
-    grid-template: 1fr/ 25% 30% 55%;
-    align-items: center;
+.text {
+  font-size: 110px;
+  @media (max-width: 764px) {
+    font-size: 46px;
+    grid-row-start: 2;
+    grid-column-start: 1;
+  }
 
 }
-.text{
-
+.years_1{
+  justify-self: start;
 }
+
+.years {
+  justify-self: end;
+  @media (max-width: 764px) {
+    justify-self: start;
+    font-size: 14px;
+  }
+}
+
