--- a/src/components/pages/Work/Leader/Leader.module.scss
+++ b/src/components/pages/Work/Leader/Leader.module.scss
@@ -2,12 +2,28 @@
   display: grid;
   grid-template: 1fr/1fr 2fr;
   padding: 50px 0 100px  0;
+  @media (max-width: 764px) {
+    display: grid;
+    grid-template: 2fr/1fr;
+    padding: 25px 0 50px  0;
+
+  }
 }
 .text{
   margin-top: 10px;
   font-size: 117px;
   font-weight: 400;
   line-height: 117px;
+  @media (max-width: 1024px) {
+    font-size: 94px;
+    line-height: 94px;
+
+  }
+  @media (max-width: 764px) {
+    font-size: 46px;
+    line-height: 46px;
+
+  }
 
 }
 .comeback{
@@ -25,6 +41,12 @@
   color: #1E1E1E;
   @media (max-width: 1124px) {
     font-size: 16px;
+    max-width: 100px;
+    line-height: 16px;
+  }
+  @media (max-width: 1024px) {
+    font-size: 13px;
+    line-height: 13px;
   }
 }
 .active{
