my second commit

--- a/src/components/pages/Contact/Contact.module.scss
+++ b/src/components/pages/Contact/Contact.module.scss
@@ -17,7 +17,7 @@
  // float: right;
   display: block;
   max-width: 857px;
-  margin-left: auto;
+ // margin-left: auto;
   //
   //flex: 0 1 60%;
   //order: 2;
